<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/li_line"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzj.jey.warehouse.AddActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/btn_q_1" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <LinearLayout
                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_name_no"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/add_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="请输入商品详细编号，本查询不支持模糊查询" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/click_state"
                    android:onClick="onQuery"
                    android:text="@string/query" />

                <TextView
                    android:id="@+id/query_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout

                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_name_1" />

                <EditText
                    android:id="@+id/add_loc_1"
                    style="@style/edit_style_loc" />

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_state_1" />


                <com.suke.widget.SwitchButton
                    android:id="@+id/loc_state_1"
                    style="@style/edit_style_loc" />

            </LinearLayout>

            <LinearLayout
                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_name_2" />

                <EditText
                    android:id="@+id/add_loc_2"
                    style="@style/edit_style_loc" />

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_state_2" />


                <com.suke.widget.SwitchButton
                    android:id="@+id/loc_state_2"
                    style="@style/edit_style_loc" />

            </LinearLayout>

            <LinearLayout
                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_name_3" />

                <EditText
                    android:id="@+id/add_loc_3"
                    style="@style/edit_style_loc" />

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_state_3" />


                <com.suke.widget.SwitchButton
                    android:id="@+id/loc_state_3"
                    style="@style/edit_style_loc" />

            </LinearLayout>

            <LinearLayout
                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_name_4" />

                <EditText
                    android:id="@+id/add_loc_4"
                    style="@style/edit_style_loc" />

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_state_4" />


                <com.suke.widget.SwitchButton
                    android:id="@+id/loc_state_4"
                    style="@style/edit_style_loc" />

            </LinearLayout>

            <LinearLayout
                style="@style/li_line"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_name_5" />

                <EditText
                    android:id="@+id/add_loc_5"
                    style="@style/edit_style_loc" />

                <TextView
                    style="@style/text_style_state"
                    android:text="@string/loc_state_5" />


                <com.suke.widget.SwitchButton
                    android:id="@+id/loc_state_5"
                    style="@style/edit_style_loc" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_save"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/click_state"
                android:gravity="center"
                android:text="@string/save"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
