<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            style="@style/text_style_content"
            android:text="@string/text_name_no_2" />

        <TextView
            style="@style/text_style_content"
            android:text="@string/loc_name_11" />

        <TextView
            style="@style/text_style_content"
            android:text="@string/loc_name_22" />

        <TextView
            style="@style/text_style_content"
            android:text="@string/loc_name_33" />

        <TextView
            style="@style/text_style_content"
            android:text="@string/loc_name_44" />

        <TextView
            style="@style/text_style_content"
            android:text="@string/loc_name_55" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/add_no"
            style="@style/text_style_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/add_loc_1"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/add_loc_2"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/add_loc_3"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/add_loc_4"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/add_loc_5"
            style="@style/text_style_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            style="@style/text_style_content"
            android:text="是否满" />

        <TextView
            android:id="@+id/loc_state_1"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/loc_state_2"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/loc_state_3"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/loc_state_4"
            style="@style/text_style_content" />

        <TextView
            android:id="@+id/loc_state_5"
            style="@style/text_style_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Price:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>